@@ -120,6 +120,15 @@ mail.admin = dspace-help@myu.edu
 # Default behaviour is to accept referrals only from dspace.hostname
 #mail.allowed.referrers = localhost
 
+# If you are connecting to a TLS/SSL protected SMTP server, enable this setting,
+# and possibly extra settings below
+#mail.ssl.enable = true
+
+# Pass extra settings to the Java mail library. Comma separated, equals sign between
+# the key and the value.
+#mail.extraproperties = mail.smtp.socketFactory.port=465, \
+#                       mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory, \
+#                       mail.smtp.socketFactory.fallback=false
 
 # Default language for metadata values
 default.language = en_US
