@@ -38,6 +38,7 @@
  - [DS-216] Migrating items that use additional metadata schemas causes an NPE
  - [DS-219] Internal Server error - include login details of user
  - [DS-221] XMLUI 'current activity' recognises Google Chrome as Safari
+ - [DS-234] Configurable passing of Javamail parameter settings
  - [DS-242] Special groups shown for logged in user rather than for user being examined
  - [DS-250] Invalid identifiers are not escaped
  - [DS-256] Item Export ignores metadata language qualifier
